Adding features and types

--- a/examples/authoring.ipynb
+++ b/examples/authoring.ipynb
@@ -4,7 +4,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Authoring Predictors"
+    "# Authoring Hub Predictors\n",
+    "NatML provides infrastructure that allows businesses to very quickly deploy machine learning in their products. NatML handles all infrastructure needs, including server provisioning, data transfers, and auto-scaling. As a result, all developers need to do is simply bring their model, along with lightweight code for making predictions server- and client-side. There are two components involved:\n",
+    "\n",
+    "1. **Executor**: The `MLExecutor` is code that is responsible for running the user's ML models on the NatML Hub cloud infrastructure. The executor is responsible for instantiating an inference runtime (like ONNX Runtime or PyTorch) and running inference on features provided by the NatML framework from end-users.\n",
+    "\n",
+    "2. **Predictor**: The predictor is a lightweight component that end-users use to request predictions. The predictor submits prediction workloads to the NatML Hub platform, and post-processes the results client-side into a form easily usable by the end-user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing the Executor\n",
+    "NatML provides the `MLExecutor` class which all executors must derive from. We will write an executor for the MobileNet v2 model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from natml import MLExecutor, MLModelData, MLFeature\n",
+    "from onnxruntime import InferenceSession\n",
+    "from typing import List\n",
+    "\n",
+    "class MobileNetv2Executor (MLExecutor):\n",
+    "\n",
+    "    def initialize (self, model_data: MLModelData, graph_path: str):\n",
+    "        \"\"\"\n",
+    "        Initialize the executor.\n",
+    "        \n",
+    "        This method should instantiate an ML inference session using an\n",
+    "        inference framework like ONNX Runtime, PyTorch, or TensorFlow.\n",
+    "\n",
+    "        Parameters:\n",
+    "            model_data (MLModelData): Model data.\n",
+    "            graph_path (str): Path to ML graph on the file system.\n",
+    "        \"\"\"\n",
+    "        self.__session = InferenceSession(graph_path)\n",
+    "        self.__model_data = model_data\n",
+    "\n",
+    "    def predict (self, *inputs: List[MLFeature]) -> List[MLFeature]:\n",
+    "        \"\"\"\n",
+    "        Make a prediction on one or more input features.\n",
+    "\n",
+    "        Parameters:\n",
+    "            inputs (list): Input features.\n",
+    "\n",
+    "        Returns:\n",
+    "            list: Output features.\n",
+    "        \"\"\"\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing the Predictor"
    ]
   },
   {
